--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "release": "release-it",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +13,18 @@
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@jest/globals": "^29.3.1",
     "@release-it/conventional-changelog": "^5.1.1",
+    "commitizen": "^4.2.6",
+    "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.2",
-    "release-it": "^15.5.1"
+    "jest": "^29.3.1",
+    "release-it": "^15.5.1",
+    "ts-jest": "^29.0.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
